--- a/web/admin-interface/index.html
+++ b/web/admin-interface/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>admin-interface</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="http://localhost:8000/CoreUI/dist/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://localhost:8000/CoreUI/dist/css/simple-line-icons.css" type="text/css" />
+    <link rel="stylesheet" href="http://localhost:8000/CoreUI/css/style.css" type="text/css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <!-- Webpack -->
+    <script src="/dist/manifest.js"></script>
+    <!-- Vendors -->
+    <script src="/dist/vendor.js"></script>
+    <!-- App -->
+    <script src="/dist/admin-add-poll.js"></script>
   </body>
 </html>
