Kdt-inputs: Ajout de l'état :disabled

--- a/web/admin-interface/index.html
+++ b/web/admin-interface/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://localhost:8000/CoreUI/dist/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="http://localhost:8000/CoreUI/dist/css/simple-line-icons.css" type="text/css" />
     <link rel="stylesheet" href="http://localhost:8000/CoreUI/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://localhost:8000/css/kdt-inputs.css" type="text/css" />
   </head>
   <body>
     <div id="app"></div>
