--- a/web/admin-interface/index.html
+++ b/web/admin-interface/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      var FORM_ACTION = 'http://google.fr';
+    </script>
     <!-- Webpack -->
     <script src="/dist/manifest.js"></script>
     <!-- Vendors -->
