Admin/AddPoll: ajout de [name] sur les <input>

--- a/web/admin-interface/index.html
+++ b/web/admin-interface/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app"></div>
     <script>
-      var FORM_ACTION = 'http://google.fr';
+      var FORM_ACTION = 'http://localhost:8011/post.php';
     </script>
     <!-- Webpack -->
     <script src="/dist/manifest.js"></script>
